Replaces uint32_t with double when working with scales

Zoom factors are double, but the code is using uint32_t to process them.
This patch fixes it.

Output on wayland info client:
OUTPUT0:

  connection:          internal
  device scale factor: 1.000

  geometry:
    x:                 2
    y:                 24
    physical width:    443 mm
    physical height:   264 mm
    subpixel:          unknown
    make:              unknown
    model:             unknown
    transform:         normal

  modes:
    1676x998:          60.00 Hz      current       preferred

  scales:
    0.500:
    0.750:
    1.000:             current       preferred
    1.250:
    1.500:
    1.750:
    2.000:
    2.250:
    2.500:

Bug: 836782
Change-Id: Id67582a637a67a608ae096a5fac992e8215aa47e
Component: Wayland, aura shell, scales
Reviewed-on: https://chromium-review.googlesource.com/1028217
Reviewed-by: David Reveman <reveman@chromium.org>
Commit-Queue: Malay Keshav <malaykeshav@chromium.org>
Cr-Commit-Position: refs/heads/master@{#553586}
Former-commit-id: e24cbe8a0ed6a7b9d96dc34560c8909ad75d2764